# replit_hackathon

./: .dockerignore  Dockerfile  docker-compose.yml  pyproject.toml  run.py  test.py
FE/: package.json
FE/attached_assets/: Pasted--Prompt-for-Front-End-Developer-Create-a-modern-responsive-feedback-display-to-present-the-per-1745092091370.txt
FE/client/src/: index.css
FE/client/src/components/: PersonalityTag.tsx
FE/client/src/pages/: FeedbackResults.tsx
FE/server/: routes.ts  storage.ts
FE/shared/: schema.ts
app/backend/: llm.py  server.py
app/backend/agents/: rate.py
app/backend/agents/prompts/: rate.prompt
app/backend/models/: ad.py  category_assignment.py  personality.py  rating.py
app/backend/store/: __init__.py  ad_store.py  category_store.py  db.py  migration.py  personality_store.py  rating_store.py  store.py
app/backend/store/migrations/: 01.personality.sql  02.ad.sql  03.category.sql  04.rating.sql  05.personality.injection.sql
app/frontend/: package-lock.json  theme.json
app/frontend/attached_assets/: Pasted--Prompt-for-Front-End-Developer-Create-a-modern-responsive-upload-form-that-enables-users-to-r-1745090641916.txt
app/frontend/client/src/: App.tsx
app/frontend/client/src/components/: AdFeedbackForm.tsx  FileUploader.tsx  PersonalitySelector.tsx
app/frontend/client/src/pages/: Home.tsx
app/frontend/server/: routes.ts
tests/: conftest.py
tests/backend/store/: test_ad_store.py  test_category_store.py  test_personality_store.py  test_rating_store.py
